react-skeleton-config/deployment.yaml
# deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-skeleton
  labels:
    app: react-skeleton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-skeleton
  template:
    metadata:
      labels:
        app: react-skeleton
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: react-skeleton
          image: acrargocdtest.azurecr.io/react-skeleton:sha-b61066f
          ports:
            - containerPort: 80
