react-skeleton-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-skeleton
  labels:
    app: react-skeleton
spec:
  selector:
    app: react-skeleton
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
